fix: fixes to dark mode styles and borders on sections

--- a/blocks/wsuwp-callout/editor/_style.scss
+++ b/blocks/wsuwp-callout/editor/_style.scss
@@ -14,8 +14,4 @@
 
     }
 
-    .wsu-callout.wsu-color-scheme--dark {
-        color: white;
-    }
-
 }
